# gitzconsul

./: .coveragerc  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run_tests.sh
.github/workflows/: docker-image.yml  python-package.yml
gitzconsul/: __init__.py  consultxn.py  main.py  repo.py  sync.py  treewalk.py
testing/: run_dev_consul.sh
tests/: consultxn_test.py  context_test.py  repo_test.py  sync_test.py  txn_test.py  walk_test.py
