[tool.poetry]
name = "gitzconsul"
version = "0.1.0"
description = "Bridge betwen git repositories and consul kv, inspired by git2consul"
authors = ["Laurent Monin <zas@metabrainz.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/metabrainz/gitzconsul"

keywords = ["consul", "docker", "kv registration"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.6"
click = ">=7.1.2"
python-consul2 = ">=0.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
wheel = "^0.36.2"
pytest-cov = "^2.11.1"
pylint = "^2.6.0"

[tool.poetry.scripts]
gitzconsul = "gitzconsul.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
