[project]
name = "gitzconsul"
version = "0.3.0"
description = "Bridge betwen git repositories and consul kv, inspired by git2consul"
authors = [{name = "Laurent Monin", email = "zas@metabrainz.org"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["consul", "docker", "kv registration"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=7.1.2",
    "requests>=2.25.1",
]

[project.scripts]
gitzconsul = "gitzconsul.main:main"

[project.urls]
Repository = "https://github.com/metabrainz/gitzconsul"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.coverage.run]
branch = true
source = ["gitzconsul"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
ignore_errors = true
omit = ["tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
